Added a new command system Added korasi special attack Fixed up autoretaliation on new combat system Removed a few debug messages Fixed a nullpointer inside CustomStore.java